se eliminan dos espacios en blanco

--- a/whatsnew/3.3.po
+++ b/whatsnew/3.3.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-05-05 12:54+0200\n"
-"PO-Revision-Date: 2021-01-29 15:18-0400\n"
+"PO-Revision-Date: 2021-01-29 20:25-0400\n"
 "Last-Translator: Yohanna Padrino <yohanazareth2693@gmail.com>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -2732,10 +2732,10 @@ msgid ""
 msgstr ""
 "Se ha agregado un nuevo diccionario :data:`~html.entities.html5` que asigna "
 "referencias de caracteres con nombre HTML5 a los caracteres *Unicode* "
-"equivalentes (por ejemplo,``html5 ['gt;'] == '>'``) al módulo :mod:`html."
-"entities`. El diccionario ahora también es utilizado por :class:`~html."
-"parser.HTMLParser`. (Contribución de Ezio Melotti en :issue:`11113` y :issue:"
-"`15156`.)"
+"equivalentes (por ejemplo,``html5['gt;'] == '>'``) ha sido agregado al "
+"módulo :mod:`html.entities`. El diccionario ahora también es utilizado por :"
+"class:`~html.parser.HTMLParser`. (Contribución por Ezio Melotti en :issue:"
+"`11113` y :issue:`15156`.)"
 
 #: ../Doc/whatsnew/3.3.rst:1450
 msgid "imaplib"
@@ -4918,7 +4918,7 @@ msgstr ""
 "presente, pero está en desuso. Las funciones :func:`pkgutil.iter_importers` "
 "y :func:`pkgutil.walk_packages` en un caso especial son los ganchos de "
 "importación estándar, por lo que aún son compatibles aunque no proporcionen "
-"el método no estándar ``iter_modules ()`."
+"el método no estándar ``iter_modules ()``."
 
 #: ../Doc/whatsnew/3.3.rst:2406
 msgid ""
