se añade el nombre del traductor al archivo translators y se eliminan otros dos problemas restantes

--- a/whatsnew/3.3.po
+++ b/whatsnew/3.3.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-05-05 12:54+0200\n"
-"PO-Revision-Date: 2021-01-29 20:25-0400\n"
+"PO-Revision-Date: 2021-01-30 22:00-0400\n"
 "Last-Translator: Yohanna Padrino <yohanazareth2693@gmail.com>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -2732,7 +2732,7 @@ msgid ""
 msgstr ""
 "Se ha agregado un nuevo diccionario :data:`~html.entities.html5` que asigna "
 "referencias de caracteres con nombre HTML5 a los caracteres *Unicode* "
-"equivalentes (por ejemplo,``html5['gt;'] == '>'``) ha sido agregado al "
+"equivalentes (por ejemplo, ``html5['gt;'] == '>'``) ha sido agregado al "
 "módulo :mod:`html.entities`. El diccionario ahora también es utilizado por :"
 "class:`~html.parser.HTMLParser`. (Contribución por Ezio Melotti en :issue:"
 "`11113` y :issue:`15156`.)"
@@ -4899,7 +4899,7 @@ msgstr ""
 "implementar éste método, primero asegúrese de verificar la existencia del "
 "método. Sin embargo, probablemente desee verificar primero el "
 "`find_loader()`, en el caso de trabajar con los buscadores de entradas :term:"
-"`<bus>`."
+"`path entry finders <path entry finder>`."
 
 #: ../Doc/whatsnew/3.3.rst:2398
 msgid ""
